update: file with the footer

--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
 
     </div>
 
+    <p class="text-center text-gray-500 text-sm mt-8">
+        © 2025, Happy Birthday with Love From MiMI.
+    </p>
+
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const tabs = document.querySelectorAll('.tab-button');
